bootstrap/argocd/argocd-applicationset-controller-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
  template:
    spec:
      containers:
        command:
        - applicationset-controller
        - --policy create-only
